k8s/apps/vaultwarden/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-svc
  namespace: apps
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls: # nuevo: bloque TLS
    - secretName: marcosoto-dev-tls
      hosts:
        - vault.marcosoto.dev
  rules:
    - host: vault.marcosoto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-svc
                port:
                  number: 80
